# EEG_Seizure

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml
benchmark/eventnet/: README.md  pyproject.toml
benchmark/eventnet/src/eventnet/: __main__.py  architecture.py  main.py  utils.py
benchmark/my_eeg_conformer/: config.py  main.py  my_eeg_dataset.py  my_models.py  readme.md
benchmark/my_eeg_conformer/experimental_conformer/: balanced_dataset.py  conformer.py  trainer.py
benchmark/my_eeg_conformer/preprocessing/: balanced_dataset.py  seizure_data.py  utils.py
benchmark/zhu/: README.md  pyproject.toml
benchmark/zhu/src/zhu/: __init__.py  __main__.py  architecture.py  main.py  utils.py
